<resources>
    <string name="app_name">RussianLanguageApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="greeting">Log in or register</string>
    <string name="start">Let\'s go!</string>
    <string name="check">check</string>
    <string name="grammar">Grammar practise</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Log in</string>
    <string name="register">Not registered yet? Click here!</string>
    <string name="email">Write your e-mail here</string>
    <string name="password">Password</string>
    <string name="registerHint">Don\'t have an account? Click here and register!</string>
    <string name="registrationDescription">Please, fill the information below</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="accountCreation">Create an account</string>
    <string name="logout">Log out</string>
</resources>
