<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.popkova.russianlanguageapp.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="67dp"
        android:id="@+id/LOGIN"
        android:layout_marginStart="48dp"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="31dp"
        android:id="@+id/PASSWORD"
        android:layout_below="@+id/LOGIN"
        android:layout_alignStart="@+id/LOGIN"
        android:hint="@string/password" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LOGIN_BUTTON"
        android:onClick="LoginButton"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/PASSWORD"
        android:layout_alignEnd="@+id/PASSWORD" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="41dp"
        android:onClick="Register"
        android:layout_below="@+id/LOGIN_BUTTON"
        android:layout_alignStart="@+id/LOGIN_BUTTON" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/LOGIN" />

</RelativeLayout>
